All responsive design, plus content done

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-title: Robostox - Tools and reports every week on tech stocks and crypto.
+title: Daniel Easterman - Founder / Software Developer
 author: Daniel Easterman
 description: Tools and reports every week on tech stocks and crypto.
 copyright: ""
