Integrates timeline js and killer apps data

--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 #      Main Configs       #
 # ----------------------- #
 
-title: Daniel Easterman - Founder / Software Developer
+title: Daniel Easterman - Writer / Software Developer
 author: Daniel Easterman
-description: Tools and reports every week on tech stocks and crypto.
+description: Journalist-turned-Developer. Coding in Python and Javascript. Interested in all things tech.
 copyright: ""
 
 # ----------------------- #
