Change wiki lynx link

--- a/json/killer_apps.json
+++ b/json/killer_apps.json
@@ -508,7 +508,7 @@
      "headline": "Lynx (text-based web browser)"
     },
     "media": {
-     "url": "https://en.wikipedia.org/wiki/Lynx",
+     "url": "https://en.wikipedia.org/wiki/Lynx_(web_browser)",
      "thumbnail": "https://pbs.twimg.com/media/Fy9dGibaUAA6Tx_.png"
     }
    },
